--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
         sans-serif;
     position: relative;
+    font-family: "Oswald", sans-serif;
 }
 
 a:hover {
@@ -185,18 +186,41 @@ input {
     text-align: center;
 }
 
+.header .list-nav .drob-lang {
+    position: relative;
+    top: -20px;
+}
+
+.header .list-nav .lang {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: var(--white);
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: none;
+}
+
+.header .list-nav .drob-lang:hover .lang {
+    display: block;
+}
+
+.header .list-nav .lang li.lang-select a {
+    color: var(--mainColor);
+}
+
 .header .list-nav .list .link-list {
     color: var(--white);
     padding: 10px 15px;
     font-size: 1.2em;
 }
 
-.header .list-nav .contant-listnav ul li {
+.header .list-nav .contant-listnav .nav-sochail li {
     margin: 20px 10px;
     display: inline-block;
 }
 
-.header .list-nav .contant-listnav ul li i {
+.header .list-nav .contant-listnav .nav-sochail li i {
     background-color: var(--white);
     color: var(--mainColor);
     width: 30px;
@@ -207,7 +231,7 @@ input {
     font-size: 1.3em;
 }
 
-.header .list-nav .contant-listnav ul li i:hover {
+.header .list-nav .contant-listnav .nav-sochail li i:hover {
     -webkit-animation: hide linear 1s infinite;
     -moz-animation: hide linear 1s infinite;
     -o-animation: hide linear 1s infinite;
@@ -339,24 +363,24 @@ input {
         margin: 20px 0;
         text-align: center;
     }
+}
 
-    .header .list-nav .list .link-list {
-        color: var(--white);
-        padding: 10px 15px;
-        text-align: center;
-    }
+.header .list-nav .list .link-list {
+    color: var(--white);
+    padding: 10px 15px;
+    text-align: center;
+}
 
-    .header .list-nav ul {
-        text-align: center;
-    }
+.header .list-nav ul {
+    text-align: center;
+}
 
-    .header .list-nav ul ul li {
-        margin: 20px 0px;
-        display: inline-block;
-    }
-    .header .list-nav .contant-listnav ul li {
-        margin: 5px;
-    }
+.header .list-nav ul .nav-sochail li {
+    margin: 20px 0px;
+    display: inline-block;
+}
+.header .list-nav .contant-listnav .nav-sochail li {
+    margin: 5px;
 }
 
 @media (max-width: 767px) {
