--- a/css/style-rtl.css
+++ b/css/style-rtl.css
@@ -43,6 +43,15 @@ body {
     font-size: 1.5em;
 }
 
+@media (max-width: 767px) {
+    .header .nav-bar .list-nav{
+        top: 50px;
+    }
+    .header .logo,
+    .header .menu {
+        font-size: 1.2em;
+    }
+}
 /* ========================================
     End Header Style  ==================*/
 
