--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,7 @@
 
 body {
     text-transform: capitalize;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     position: relative;
     font-family: "Oswald", sans-serif;
 }
@@ -121,7 +120,82 @@ input {
     -o-transition: right 0.9s;
     transition: right 0.9s;
 }
+.box-load {
+    z-index: 20;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #1c1f2f;
+    display: flex;
+}
+.box-load .loader {
+    position: relative;
+    margin: auto;
+    -webkit-box-reflect: below 5px linear-gradient(transparent, #0000002e);
+    -moz-box-reflect: below 5px linear-gradient(transparent, #0000002e);
+    -o-box-reflect: below 5px linear-gradient(transparent, #0000002e);
+    -ms-box-reflect: below 5px linear-gradient(transparent, #0000002e);
+}
+.loader .parnet {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 20px solid transparent;
+    border-bottom: 20px solid var(--mainColor);
+    border-right: 20px solid var(--mainColor);
+    transform: rotate(45deg);
+    -webkit-animation: load ease-in-out 4s infinite;
+    -moz-animation: load ease-in-out 4s infinite;
+    -o-animation: load ease-in-out 4s infinite;
+    animation: load ease-in-out 4s infinite;
+}
 
+@keyframes load {
+    0%,
+    100% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(90deg);
+    }
+}
+
+.loader .parnet .bull {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    -webkit-animation: loadBull ease-in-out 4s infinite;
+    -moz-animation: loadBull ease-in-out 4s infinite;
+    -o-animation: loadBull ease-in-out 4s infinite;
+    animation: loadBull ease-in-out 4s infinite;
+}
+
+@keyframes loadBull {
+    0%,
+    100% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+}
+.loader .parnet .bull::before {
+    content: "";
+    position: absolute;
+    bottom: 50%;
+    transform: translateY(-50%);
+    right: 15px;
+    width: 40px;
+    height: 40px;
+    background-color: var(--white);
+    border-radius: 50%;
+}
 @media (max-width: 992px) {
     .title-section .title {
         font-size: 1.5em;
@@ -139,11 +213,7 @@ input {
 /* ========================================
     Srtart Header Style ==================*/
 .header {
-    background-image: linear-gradient(
-            rgba(67, 73, 80, 0.8),
-            rgba(67, 73, 80, 0.8)
-        ),
-        url("../images/bg/macbook-925614.png");
+    background-image: linear-gradient(rgba(67, 73, 80, 0.8), rgba(67, 73, 80, 0.8)), url("../images/bg/macbook-925614.png");
     color: var(--white);
     position: relative;
 }
@@ -521,11 +591,7 @@ input {
 /* ========================================
     Start Subscribe Style  ==================*/
 .subscribe {
-    background-image: linear-gradient(
-            rgba(67, 73, 80, 0.8),
-            rgba(67, 73, 80, 0.8)
-        ),
-        url("../images/bg/tablet-791051.png");
+    background-image: linear-gradient(rgba(67, 73, 80, 0.8), rgba(67, 73, 80, 0.8)), url("../images/bg/tablet-791051.png");
 }
 
 .subscribe form {
@@ -706,11 +772,7 @@ input {
 /* ========================================
     Start Testmonial Style  ==================*/
 .testmonial {
-    background-image: linear-gradient(
-            rgba(67, 73, 80, 0.8),
-            rgba(67, 73, 80, 0.8)
-        ),
-        url("../images/bg/woman-690036.png");
+    background-image: linear-gradient(rgba(67, 73, 80, 0.8), rgba(67, 73, 80, 0.8)), url("../images/bg/woman-690036.png");
 }
 
 .testmonial .testmonial-content {
@@ -877,11 +939,7 @@ input {
 /* ========================================
     Start Contcat Style  ==================*/
 .contact {
-    background-image: linear-gradient(
-            rgba(67, 73, 80, 0.8),
-            rgba(67, 73, 80, 0.8)
-        ),
-        url("../images/bg/Prostokąt\ 1\ kopia\ 8.png");
+    background-image: linear-gradient(rgba(67, 73, 80, 0.8), rgba(67, 73, 80, 0.8)), url("../images/bg/Prostokąt\ 1\ kopia\ 8.png");
     color: var(--white);
 }
 
