--- a/css/style-rtl.css
+++ b/css/style-rtl.css
@@ -16,7 +16,7 @@ body {
     font-family: "El Messiri", sans-serif;
 }
 
-.fa-angle-up {
+.up-page {
     right: auto;
     left: 20px;
     -webkit-transition: left 0.9s;
